--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "type": "module",
   "dependencies": {
-    "raylib": "^0.14.0",
-    "sqlite3": "^5.1.6"
+    "express": "^4.18.2",
+    "fuse.js": "^7.0.0",
+    "handlebars": "^4.7.8",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon & bun run browsersync",
+    "browsersync": "sleep 0.2 && browser-sync start --proxy 'localhost:8282' --files 'templates/*' 'src/*' --no-open"
   }
 }
