--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "eslint": "^8.52.0",
     "express": "^4.18.2",
     "fuse.js": "^7.0.0",
     "handlebars": "^4.7.8",
@@ -8,6 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon & bun run browsersync",
-    "browsersync": "sleep 0.2 && browser-sync start --proxy 'localhost:8282' --files 'templates/*' 'src/*' --no-open"
+    "browsersync": "sleep 0.2 && browser-sync start --proxy 'localhost:8282' --files 'templates/*' 'src/*' --no-open",
+    "format": "eslint . -c 'eslint.yml' --ext .js --fix"
   }
 }
