--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "scripts": {
     "dev": "nodemon & bun run browsersync",
     "browsersync": "sleep 0.2 && browser-sync start --proxy 'localhost:8282' --files 'templates/*' 'src/*' --no-open",
-    "format": "eslint . -c 'eslint.yml' --ext .js --fix"
+    "format": "bun run eslint . -c 'eslint.yml' --ext .js --fix"
   }
 }
