--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "fuse.js": "^7.0.0",
     "handlebars": "^4.7.8",
     "nodemon": "^3.0.1",
-    "sqlite3": "^5.1.6",
-    "uuid": "^9.0.1"
+    "short-uuid": "^4.2.2",
+    "sqlite3": "^5.1.6"
   },
   "scripts": {
     "dev": "bun run nodemon & bun run browsersync",
