--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "fuse.js": "^7.0.0",
     "handlebars": "^4.7.8",
+    "moment": "^2.29.4",
     "nodemon": "^3.0.1",
     "short-uuid": "^4.2.2",
     "sqlite3": "^5.1.6"
